Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-37034

REG: Android: Armv5 build broken

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.3.0
    • 5.3.0
    • QPA
    • None
    • Android
    • 6813a21c522631e5388b2cbf3f8e4e273b0d27ce

    Description

      ARMv5 build currently fails with the following message:

      /opt/android/ndk/toolchains/arm-linux-androideabi-4.8/prebuilt/linux-x86_64/bin/arm-linux-androideabi-g++ -c -Wno-psabi -march=armv5te -mtune=xscale -msoft-float -ffunction-sections -funwind-tables -fstack-protector -fno-short-enums -DANDROID -Wa,--noexecstack -std=gnu++0x -O2 -mthumb -Os -fomit-frame-pointer -fno-strict-aliasing -finline-limit=64 -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wno-psabi -W -D_REENTRANT -fPIC -DQT_OS_ANDROID_GCC_48_WORKAROUND -DQT_EDITION=QT_EDITION_DESKTOP -DQT_NO_MTDEV -DQT_NO_LIBUDEV -DQT_NO_XCB -DQT_NO_XKBCOMMON -DQT_NO_USING_NAMESPACE -DQT_BUILD_CORE_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DPCRE_HAVE_CONFIG_H -DQT_CORE_LIB -DQT_NO_DEBUG -I../../mkspecs/android-g++ -I. -I/home/qt/temp/openssl-1.0.0a/include -I../../include -I../../include/QtCore -I../../include/QtCore/5.3.0 -I../../include/QtCore/5.3.0/QtCore -Iglobal -I../3rdparty/pcre -I../3rdparty/harfbuzz/src -I../3rdparty/md5 -I../3rdparty/md4 -I../3rdparty/sha3 -I.moc -I/opt/android/ndk/sources/cxx-stl/gnu-libstdc++/4.8/include -I/opt/android/ndk/sources/cxx-stl/gnu-libstdc++/4.8/libs/armeabi/include -isystem /opt/android/ndk/platforms/android-9/arch-arm/usr/include tools/qstring_compat.cpp -o .obj/qstring_compat.o
      In file included from ../../include/QtCore/qatomic_armv5.h:1:0,
                       from ../../include/QtCore/../../src/corelib/thread/qbasicatomic.h:60,
                       from ../../include/QtCore/qbasicatomic.h:1,
                       from ../../include/QtCore/../../src/corelib/thread/qatomic.h:47,
                       from ../../include/QtCore/qatomic.h:1,
                       from ../../include/QtCore/../../src/corelib/global/qglobal.h:1061,
                       from ../../include/QtCore/qglobal.h:1,
                       from ../../include/QtCore/../../src/corelib/tools/qchar.h:45,
                       from ../../include/QtCore/qchar.h:1,
                       from tools/qstring.h:45,
                       from tools/qstring_compat.cpp:47:
      ../../include/QtCore/../../src/corelib/arch/qatomic_armv5.h:136:6: error: template-id 'testAndSetRelaxed<>' for 'bool QBasicAtomicOps<4>::testAndSetRelaxed(T&, T, T, T*)' does not match any template declaration
       bool QBasicAtomicOps<4>::testAndSetRelaxed(T &_q_value, T expectedValue, T newValue, T *currentValue) Q_DECL_NOTHROW
            ^
      make[3]: *** [.obj/qstring_compat.o] Error 1
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            esabraha Eskil Abrahamsen Blomfeldt
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes