Fix compilation on armv5

Two changes broke compilation on armv5, where we're currently
not CI-testing:

634f82f1f1fda7983abf70b58e43c580b1f01df0 changed the signature
in a function definition without changing its declaration, while
it was actually intending to add this as a new overload.

bfe0db6fbea6376dbe395af6d76995a54bbc3b49 added an #error
condition without fixing compilation on armv5. I don't know
if the fix is correct, but at least it compiles.

Task-number: QTBUG-37034
Change-Id: If99142fafb9bd55afc20b17f8b3cce5ee0ffec13
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>